--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,38 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.btnGroup {
+  width: 25%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.btn {
+  width: 75px;
+  height: 25px;
+  letter-spacing: 0.5px;
+  background-color: #058f00;
+  color: white;
+  font-size: 16px;
+  border: 2px solid #058f00;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.active {
+  background-color: rgb(30, 56, 5);
+  border: 2px solid rgb(30, 56, 5);
+}
+
+.chart {
+  background-color: red;
+  width: 100%;
+  height: 700px;
+  border-radius: 6px;
+  box-shadow: 10px -2px 20px 2px rgb(0 0 0 / 30%);
+  background-color: #202020;
+  margin: 20px 0;
+}
